--- a/Autobus/MainWindow.xaml
+++ b/Autobus/MainWindow.xaml
@@ -2,15 +2,16 @@
     x:Class="Autobus.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Controls="clr-namespace:Extensions.Controls;assembly=Extensions"
     xmlns:Extension="clr-namespace:Extensions;assembly=Extensions"
     xmlns:Model="clr-namespace:Autobus.Model"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:local="clr-namespace:Autobus"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:properties="clr-namespace:Autobus.Properties"
     xmlns:viewmodel="clr-namespace:Autobus.ViewModel"
-    d:DesignHeight="578" d:DesignWidth="1280"
     DataContext="{Binding Mode=OneWay, Source={StaticResource MainViewModel}}"
-    UseLayoutRounding="True" WindowStartupLocation="CenterScreen" WindowState="Maximized"
+    d:DesignHeight="578" d:DesignWidth="1280" UseLayoutRounding="True" WindowStartupLocation="CenterScreen"
+    WindowState="Maximized"
     mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
@@ -95,6 +96,69 @@
                         KeyTip="Y" Label="YOLCU GİRİŞİ YAP" LargeImageSource="/Resources/car-sharing.png" />
                     <RibbonButton Command="{Binding YolcuDüzeniEkranı}"
                         KeyTip="YD" Label="YOLCU DÜZENİ" LargeImageSource="/Resources/car-sharing.png" />
+                </RibbonGroup>
+                <RibbonGroup Header="Veriler">
+                    <RibbonSplitButton Command="{Binding Yedekle, Mode=OneWay}" KeyTip="Y" Label="Verileri Yedekle">
+                        <RibbonSplitButton.LargeImageSource>
+                            <MultiBinding Converter="{StaticResource SystemFileIconConverter}">
+                                <Binding Source="Shell32.dll" />
+                                <Binding Source="192" />
+                            </MultiBinding>
+                        </RibbonSplitButton.LargeImageSource>
+                        <RibbonSplitButton.SmallImageSource>
+                            <MultiBinding Converter="{StaticResource SystemFileIconConverter}">
+                                <Binding Source="Shell32.dll" />
+                                <Binding Source="192" />
+                            </MultiBinding>
+                        </RibbonSplitButton.SmallImageSource>
+                        <RibbonSplitMenuItem Header="SIKIŞTIRMA UYGULA" IsCheckable="True" IsChecked="{Binding Compress}" />
+                    </RibbonSplitButton>
+                    <RibbonToggleButton KeyTip="GY" Label="Yedekten Dosya Aç">
+                        <RibbonToggleButton.LargeImageSource>
+                            <MultiBinding Converter="{StaticResource SystemFileIconConverter}">
+                                <Binding Source="zipfldr.dll" />
+                                <Binding Source="0" />
+                            </MultiBinding>
+                        </RibbonToggleButton.LargeImageSource>
+                        <RibbonToggleButton.SmallImageSource>
+                            <MultiBinding Converter="{StaticResource SystemFileIconConverter}">
+                                <Binding Source="zipfldr.dll" />
+                                <Binding Source="0" />
+                            </MultiBinding>
+                        </RibbonToggleButton.SmallImageSource>
+                        <Popup AllowsTransparency="True"
+                            IsOpen="{Binding IsChecked, RelativeSource={RelativeSource AncestorType=RibbonToggleButton}}"
+                            Placement="Bottom"
+                            PlacementTarget="{Binding Mode=OneWay, RelativeSource={RelativeSource AncestorType=RibbonToggleButton}}">
+                            <GroupBox Width="480" Height="360" Header="ARŞİV GÖSTERİCİ">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition />
+                                    </Grid.RowDefinitions>
+                                    <Button Content="AÇ" Command="{Binding ArşivAç}" />
+                                    <Controls:ArchiveViewer Grid.Row="1" ArchivePath="{Binding DataContext.ArşivYolu, RelativeSource={RelativeSource AncestorType=Grid}}" />
+                                </Grid>
+                            </GroupBox>
+                        </Popup>
+                    </RibbonToggleButton>
+                </RibbonGroup>
+                <RibbonGroup Header="Hakkında">
+                    <RibbonButton Command="{Binding WebAdreseGit, Mode=OneWay}"
+                        CommandParameter="https://github.com/goksenpasli" KeyTip="H" Label="Hakkında">
+                        <RibbonButton.LargeImageSource>
+                            <MultiBinding Converter="{StaticResource SystemFileIconConverter}">
+                                <Binding Source="Shell32.dll" />
+                                <Binding Source="14" />
+                            </MultiBinding>
+                        </RibbonButton.LargeImageSource>
+                        <RibbonButton.SmallImageSource>
+                            <MultiBinding Converter="{StaticResource SystemFileIconConverter}">
+                                <Binding Source="Shell32.dll" />
+                                <Binding Source="14" />
+                            </MultiBinding>
+                        </RibbonButton.SmallImageSource>
+                    </RibbonButton>
                 </RibbonGroup>
             </RibbonTab>
         </Ribbon>
