--- a/Autobus/View/AraçMasrafGirişView.xaml
+++ b/Autobus/View/AraçMasrafGirişView.xaml
@@ -28,14 +28,6 @@
                         ItemsPanel="{StaticResource ComboBoxItemsVirtualizedPanel}"
                         ItemsSource="{Binding Otobüs.Sefer, Source={StaticResource MainViewModel}}"
                         SelectedItem="{Binding SeçiliSefer}" />
-                    <TextBlock Text="ARAÇ SEÇİMİ" />
-                    <ComboBox IsEnabled="False"
-                        ItemTemplate="{StaticResource AraçTemplate}"
-                        ItemsPanel="{StaticResource ComboBoxItemsVirtualizedPanel}"
-                        ItemsSource="{Binding Otobüs.Araçlar.Araç, Source={StaticResource MainViewModel}}"
-                        SelectedItem="{Binding SeçiliAraç}"
-                        SelectedValue="{Binding ElementName=CbSefer, Path=SelectedItem.AraçId}"
-                        SelectedValuePath="Id" />
                     <TextBlock Text="MASRAF AÇIKLAMA" />
                     <TextBox Text="{Binding Masraf.Açıklama, UpdateSourceTrigger=PropertyChanged}" />
                     <Extensions:NumericUpDownControl Minimum="0" ShowMode="CurrencyMode" SmallChange="1"
@@ -43,9 +35,8 @@
                     <Button Command="{Binding MasrafEkle}">
                         <Button.Content>
                             <StackPanel Orientation="Horizontal">
-                                <TextBlock VerticalAlignment="Center" Text="MASRAF EKLE" />
-                                <Image Width="32" Height="32"
-                                    Source="/Resources/car-repair.png" />
+                                <TextBlock Text="MASRAF EKLE" VerticalAlignment="Center" />
+                                <Image Width="32" Height="32" Source="/Resources/car-repair.png" />
                             </StackPanel>
                         </Button.Content>
                     </Button>
@@ -56,28 +47,28 @@
                             d:ItemsSource="{d:SampleData ItemCount=5}"
                             ItemTemplate="{DynamicResource AraçTemplate}"
                             ItemsSource="{Binding Otobüs.Araçlar.Araç, Source={StaticResource MainViewModel}}" />
-                        <ListBox d:ItemsSource="{d:SampleData ItemCount=5}"
-                            ItemTemplate="{DynamicResource MasrafTemplate}"
-                            ItemsSource="{Binding ElementName=LbAraç, Path=SelectedItem.Masraf}" />
+                        <ListBox d:ItemsSource="{d:SampleData ItemCount=5}" ItemTemplate="{DynamicResource MasrafTemplate}" ItemsSource="{Binding ElementName=LbAraç, Path=SelectedItem.Masraf}" />
                     </UniformGrid>
                 </GroupBox>
             </Grid>
         </GroupBox>
-        <GroupBox Grid.Column="1" Header="ÖNİZLEME">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
-                <Canvas Width="96" Height="96"
-                    HorizontalAlignment="Left"
-                    Background="{StaticResource Direksiyon}" />
-                <ContentControl Grid.Row="1"
-                    Content="{Binding SeçiliAraç}"
-                    ContentTemplate="{StaticResource AraçÖnizleme}" />
-            </Grid>
-
+        <GroupBox Grid.Column="1">
+            <GroupBox.Header>
+                <StackPanel Orientation="Horizontal">
+                    <Canvas Width="96" Height="96"
+                        HorizontalAlignment="Left"
+                        Background="{StaticResource Direksiyon}" />
+                    <ComboBox IsEnabled="False"
+                        ItemTemplate="{StaticResource AraçTemplate}"
+                        ItemsPanel="{StaticResource ComboBoxItemsVirtualizedPanel}"
+                        ItemsSource="{Binding Otobüs.Araçlar.Araç, Source={StaticResource MainViewModel}}"
+                        SelectedItem="{Binding SeçiliAraç}"
+                        SelectedValue="{Binding ElementName=CbSefer, Path=SelectedItem.AraçId}"
+                        SelectedValuePath="Id"
+                        Template="{StaticResource ComboBoxSimpleTemplate}" />
+                </StackPanel>
+            </GroupBox.Header>
+            <ContentControl Content="{Binding SeçiliAraç}" ContentTemplate="{StaticResource AraçÖnizleme}" />
         </GroupBox>
-
     </Grid>
 </UserControl>
